@@ -34,3 +34,4 @@ discretized covariance over the time grid= RegularGrid(start=0, step=0.333333, n
  [ 0.367879 0.735759 0        0.513417 1.02683  0        0.716531 1.43306  0        1        2        0        ]
  [ 0.735759 1.47152  0.551819 1.02683  2.05367  0.770126 1.43306  2.86613  1.0748   2        4        1.5      ]
  [ 0        0.551819 3.31091  0        0.770126 4.62075  0        1.0748   6.44878  0        1.5      9        ]]
+[1,1,1,2,2,0]
