@@ -75,6 +75,7 @@
  * #917 (Bug in RandomMixture::computeCDF())
  * #919 (Wrong simplification mechanism in MarginalTransformationEvaluation for Exponential distribution)
  * #921 (Cannot print a FixedExperiment when built from sample and weight)
+ * #923 (Fix ExponentialModel::getParameter for diagonal correlation)
 
 == 1.9 release (2017-04-18) == #release-1.9
 
